Enrichment and overlap analyses redone.

--- a/enrichment_analysis/combined_ea.ipynb
+++ b/enrichment_analysis/combined_ea.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m --------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------------------------ tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -183,10 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 2\n",
-    "# hub_con_thresh <- 0.5\n",
-    "# hub_con_thresh <- 0.25\n",
-    "hub_con_thresh <- 0.0"
+    "dset_idx <- 3\n",
+    "save_res <- TRUE"
    ]
   },
   {
@@ -199,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -216,7 +214,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  hugo_symbol = \u001b[31mcol_character()\u001b[39m,\n",
       "  entrez_gene_id = \u001b[32mcol_double()\u001b[39m\n",
@@ -231,8 +229,30 @@
     "gene2id_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/hugo2entrez.tsv\"))\n",
     "deg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_deg_list.txt\"))\n",
     "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
-    "nsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
-    "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))"
+    "\n",
+    "# FIGO (UMSMG or NSMG) AND DEMG\n",
+    "figo_umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_umsmg_list.txt\"))\n",
+    "figo_nsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_nsmg_list.txt\"))\n",
+    "figo_list <- figo_umsmg_list %>%\n",
+    "    union(figo_nsmg_list) %>%\n",
+    "    intersect(demg_list)\n",
+    "\n",
+    "# Survival UMSMG AND DEMG\n",
+    "survival_umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_umsmg_list.txt\"))\n",
+    "survival_list <- survival_umsmg_list %>%\n",
+    "    intersect(demg_list)\n",
+    "# nsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
+    "# umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go_dfs <- list()\n",
+    "kegg_dfs <- list()"
    ]
   },
   {
@@ -244,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,12 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "deg_go_df <- make_ea_df(deg_go, ea_type = \"GO\")\n",
-    "demg_go_df <- make_ea_df(demg_go, ea_type = \"GO\")"
+    "go_dfs[[\"deg_go\"]] <- make_ea_df(deg_go, ea_type = \"GO\")\n",
+    "go_dfs[[\"demg_go\"]] <- make_ea_df(demg_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -292,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -315,46 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deg_kegg_df <- make_ea_df(deg_kegg, ea_type = \"KEGG\")\n",
-    "demg_kegg_df <- make_ea_df(demg_kegg, ea_type = \"KEGG\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Write out"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(\n",
-    "    deg_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_deg_go.tsv\"),\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    deg_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_deg_kegg.tsv\"),\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    demg_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_demg_go.tsv\"),\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    demg_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_demg_kegg.tsv\"),\n",
-    ")"
+    "kegg_dfs[[\"deg_kegg\"]] <- make_ea_df(deg_kegg, ea_type = \"KEGG\")\n",
+    "kegg_dfs[[\"demg_kegg\"]] <- make_ea_df(demg_kegg, ea_type = \"KEGG\")"
    ]
   },
   {
@@ -370,11 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umsmg_demg_df <- umsmg_demg_list %>%\n",
-    "    as_tibble_col(column_name = \"geneID\") %>%\n",
-    "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))\n",
-    "\n",
-    "nsmg_demg_df <- nsmg_demg_list %>%\n",
+    "figo_df <- figo_list %>%\n",
     "    as_tibble_col(column_name = \"geneID\") %>%\n",
     "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
    ]
@@ -392,8 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umsmg_demg_go <- enrichGO(umsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
-    "nsmg_demg_go <- enrichGO(nsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
+    "figo_go <- enrichGO(figo_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
    ]
   },
   {
@@ -402,8 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umsmg_demg_go_df <- make_ea_df(umsmg_demg_go, ea_type = \"GO\")\n",
-    "nsmg_demg_go_df <- make_ea_df(nsmg_demg_go, ea_type = \"GO\")"
+    "go_dfs[[\"figo_go\"]] <- make_ea_df(figo_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -419,8 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umsmg_demg_kegg <- enrichKEGG(umsmg_demg_df$entrez_gene_id, organism = \"hsa\")\n",
-    "nsmg_demg_kegg <- enrichKEGG(nsmg_demg_df$entrez_gene_id, organism = \"hsa\")"
+    "figo_kegg <- enrichKEGG(figo_df$entrez_gene_id, organism = \"hsa\")"
    ]
   },
   {
@@ -429,8 +408,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umsmg_demg_kegg_df <- make_ea_df(umsmg_demg_kegg, ea_type = \"KEGG\")\n",
-    "nsmg_demg_kegg_df <- make_ea_df(nsmg_demg_kegg, ea_type = \"KEGG\")"
+    "kegg_dfs[[\"figo_kegg\"]] <- make_ea_df(figo_kegg, ea_type = \"KEGG\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Survival"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survival_df <- survival_list %>%\n",
+    "    as_tibble_col(column_name = \"geneID\") %>%\n",
+    "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gene-set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survival_go <- enrichGO(survival_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go_dfs[[\"survival_go\"]] <- make_ea_df(survival_go, ea_type = \"GO\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pathway"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survival_kegg <- enrichKEGG(survival_df$entrez_gene_id, organism = \"hsa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kegg_dfs[[\"survival_kegg\"]] <- make_ea_df(survival_kegg, ea_type = \"KEGG\")"
    ]
   },
   {
@@ -442,29 +488,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'deg_go'</li><li>'demg_go'</li><li>'figo_go'</li><li>'survival_go'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'deg\\_go'\n",
+       "\\item 'demg\\_go'\n",
+       "\\item 'figo\\_go'\n",
+       "\\item 'survival\\_go'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'deg_go'\n",
+       "2. 'demg_go'\n",
+       "3. 'figo_go'\n",
+       "4. 'survival_go'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"deg_go\"      \"demg_go\"     \"figo_go\"     \"survival_go\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(go_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'deg_kegg'</li><li>'demg_kegg'</li><li>'figo_kegg'</li><li>'survival_kegg'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'deg\\_kegg'\n",
+       "\\item 'demg\\_kegg'\n",
+       "\\item 'figo\\_kegg'\n",
+       "\\item 'survival\\_kegg'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'deg_kegg'\n",
+       "2. 'demg_kegg'\n",
+       "3. 'figo_kegg'\n",
+       "4. 'survival_kegg'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"deg_kegg\"      \"demg_kegg\"     \"figo_kegg\"     \"survival_kegg\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(kegg_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 0 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>type</th><th scope=col>geneIDs</th><th scope=col>count</th><th scope=col>ratio</th><th scope=col>qval</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;named list&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 0 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " type & geneIDs & count & ratio & qval\\\\\n",
+       " <chr> & <chr> & <int> & <named list> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 0 × 5\n",
+       "\n",
+       "| type &lt;chr&gt; | geneIDs &lt;chr&gt; | count &lt;int&gt; | ratio &lt;named list&gt; | qval &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     type geneIDs count ratio qval"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "kegg_dfs$survival_kegg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(\n",
-    "    umsmg_demg_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_umsmg_demg_go.tsv\")\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    nsmg_demg_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_nsmg_demg_go.tsv\")\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    umsmg_demg_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_umsmg_demg_kegg.tsv\")\n",
-    ")\n",
-    "\n",
-    "write_tsv(\n",
-    "    nsmg_demg_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_nsmg_demg_kegg.tsv\")\n",
-    ")"
+    "if (save_res) {\n",
+    "    for (go_n in names(go_dfs)) {\n",
+    "        if (nrow(go_dfs[[go_n]]) > 0) {\n",
+    "            write_tsv(go_dfs[[go_n]], paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", go_n, \".tsv\"))\n",
+    "        }\n",
+    "    }\n",
+    "    for (kegg_n in names(kegg_dfs)) {\n",
+    "        if (nrow(kegg_dfs[[kegg_n]]) > 0) {\n",
+    "            write_tsv(kegg_dfs[[kegg_n]], paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", kegg_n, \".tsv\"))\n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
