--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "configured-indiana",
+   "id": "selective-moral",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sunrise-basement",
+   "id": "major-digit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "going-horse",
+   "id": "suffering-examination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "civic-jersey",
+   "id": "higher-newton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +71,13 @@
     "cph_coeff_thresh <- 0.0\n",
     "q_pbc_thresh <- 0.05\n",
     "q_cts_thresh <- 0.05\n",
-    "q_univ_surv_thresh <- 0.05"
+    "q_univ_surv_thresh <- 0.05\n",
+    "p_mm_thresh <- 0.05"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "imported-barrel",
+   "id": "eligible-trust",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,14 +86,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sitting-means",
+   "id": "accepting-newspaper",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "thirty-millennium",
+   "id": "ceramic-strap",
    "metadata": {},
    "source": [
     "# Data"
@@ -101,8 +102,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "simplified-subject",
-   "metadata": {},
+   "id": "pregnant-builder",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reflected-mayor",
+   "id": "mineral-richardson",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -288,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-moldova",
+   "id": "palestinian-opposition",
    "metadata": {},
    "source": [
     "## DEG"
@@ -297,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "loved-surgery",
+   "id": "nervous-elizabeth",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genuine-peoples",
+   "id": "selected-separate",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -368,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "generic-episode",
+   "id": "convinced-yahoo",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opened-diana",
+   "id": "competitive-plant",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -440,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-budapest",
+   "id": "modular-oasis",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -448,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-algeria",
+   "id": "clean-november",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -457,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "normal-decade",
+   "id": "trying-paris",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "streaming-camera",
+   "id": "bridal-earth",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -496,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "adjusted-canvas",
+   "id": "heard-secondary",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-rapid",
+   "id": "choice-prisoner",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -535,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cathedral-bahrain",
+   "id": "beautiful-banner",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "absolute-distinction",
+   "id": "dimensional-windsor",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thrown-determination",
+   "id": "proved-scoop",
    "metadata": {},
    "source": [
     "## Survival"
@@ -643,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-jacob",
+   "id": "double-huntington",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -652,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "designing-employee",
+   "id": "combined-institute",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-result",
+   "id": "severe-glossary",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -691,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "transparent-private",
+   "id": "eligible-benjamin",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-address",
+   "id": "dimensional-ambassador",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -732,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "reliable-collectible",
+   "id": "representative-spread",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "acceptable-realtor",
+   "id": "narrow-lender",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appreciated-jenny",
+   "id": "turkish-detail",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -840,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "transparent-seven",
+   "id": "joined-swift",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "transparent-knight",
+   "id": "radical-season",
    "metadata": {},
    "outputs": [
     {
@@ -901,13 +907,13 @@
     }
    ],
    "source": [
-    "wgcna_meta_ls <- wgcna_meta(network_me_sig_df, network_mm_gs_df, q_me_thresh, p_thresh, hub_df$geneID)\n",
+    "wgcna_meta_ls <- wgcna_meta(network_me_sig_df, network_mm_gs_df, q_me_thresh, p_mm_thresh, hub_df$geneID)\n",
     "wgcna_meta_ls[1:2]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-fantasy",
+   "id": "printable-voluntary",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -916,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "communist-reset",
+   "id": "naval-raising",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-davis",
+   "id": "dominican-antenna",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -975,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "inclusive-auckland",
+   "id": "skilled-thing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,22 +993,29 @@
     "survival_umsmg_list <- en_cph_meta_ls$genes %>%\n",
     "    union(cts_meta_ls$genes) %>%\n",
     "    union(univ_survival_meta_ls$genes)\n",
-    "all_umsmg_list <- figo_umsmg_list %>%\n",
-    "    intersect(survival_umsmg_list)\n",
+    "# all_umsmg_list <- figo_umsmg_list %>%\n",
+    "#     intersect(survival_umsmg_list)\n",
     "figo_nsmg_list <- wgcna_meta_ls$genes\n",
-    "figo_umsmg_demg_list <- figo_umsmg_list %>%\n",
+    "# figo_umsmg_demg_list <- figo_umsmg_list %>%\n",
+    "#     intersect(demg_list)\n",
+    "# survival_umsmg_demg_list <- survival_umsmg_list %>%\n",
+    "#     intersect(demg_list)\n",
+    "# figo_umsmg_nsmg_demg_list <- figo_umsmg_list %>%\n",
+    "#     intersect(figo_nsmg_list) %>%\n",
+    "#     intersect(demg_list)\n",
+    "figo_list <- figo_umsmg_list %>%\n",
+    "    union(figo_nsmg_list) %>%\n",
     "    intersect(demg_list)\n",
-    "survival_umsmg_demg_list <- survival_umsmg_list %>%\n",
+    "survival_list <- survival_umsmg_list %>%\n",
     "    intersect(demg_list)\n",
-    "figo_umsmg_nsmg_demg_list <- figo_umsmg_list %>%\n",
-    "    intersect(figo_nsmg_list) %>%\n",
-    "    intersect(demg_list)"
+    "full_overlap_list <- figo_list %>%\n",
+    "    intersect(survival_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "soviet-basement",
+   "id": "inappropriate-kingston",
    "metadata": {},
    "outputs": [
     {
@@ -1044,88 +1057,16 @@
     {
      "data": {
       "text/html": [
-       "33"
+       "65"
       ],
       "text/latex": [
-       "33"
+       "65"
       ],
       "text/markdown": [
-       "33"
+       "65"
       ],
       "text/plain": [
-       "[1] 33"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "49"
-      ],
-      "text/latex": [
-       "49"
-      ],
-      "text/markdown": [
-       "49"
-      ],
-      "text/plain": [
-       "[1] 49"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "1"
-      ],
-      "text/latex": [
-       "1"
-      ],
-      "text/markdown": [
-       "1"
-      ],
-      "text/plain": [
-       "[1] 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "71"
-      ],
-      "text/latex": [
-       "71"
-      ],
-      "text/markdown": [
-       "71"
-      ],
-      "text/plain": [
-       "[1] 71"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "22"
-      ],
-      "text/latex": [
-       "22"
-      ],
-      "text/markdown": [
-       "22"
-      ],
-      "text/plain": [
-       "[1] 22"
+       "[1] 65"
       ]
      },
      "metadata": {},
@@ -1152,16 +1093,16 @@
     {
      "data": {
       "text/html": [
-       "1"
+       "2"
       ],
       "text/latex": [
-       "1"
+       "2"
       ],
       "text/markdown": [
-       "1"
+       "2"
       ],
       "text/plain": [
-       "[1] 1"
+       "[1] 2"
       ]
      },
      "metadata": {},
@@ -1171,18 +1112,24 @@
    "source": [
     "length(deg_list)\n",
     "length(demg_list)\n",
-    "length(figo_umsmg_list)\n",
-    "length(survival_umsmg_list)\n",
-    "length(all_umsmg_list)\n",
-    "length(figo_nsmg_list)\n",
-    "length(figo_umsmg_demg_list)\n",
-    "length(survival_umsmg_demg_list)\n",
-    "length(figo_umsmg_nsmg_demg_list)"
+    "length(figo_list)\n",
+    "length(survival_list)\n",
+    "length(full_overlap_list)\n",
+    "\n",
+    "# length(deg_list)\n",
+    "# length(demg_list)\n",
+    "# length(figo_umsmg_list)\n",
+    "# length(figo_nsmg_list)\n",
+    "# length(survival_umsmg_list)\n",
+    "# length(all_umsmg_list)\n",
+    "# length(figo_umsmg_demg_list)\n",
+    "# length(survival_umsmg_demg_list)\n",
+    "# length(figo_umsmg_nsmg_demg_list)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "integral-flooring",
+   "id": "classified-constitution",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1191,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "sudden-tackle",
+   "id": "whole-engineering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "champion-preliminary",
+   "id": "editorial-addiction",
    "metadata": {},
    "outputs": [],
    "source": []
